force-app/main/default/objects/smagicinteract__Rule_Interface_Category_Map__mdt/smagicinteract__Rule_Interface_Category_Map__mdt.object-meta.xml
<CustomObject>
    <description>This is junction object between Interface group/category and routing rule.</description>
    <label>Rule Interface Category Map</label>
    <pluralLabel>Rule Interface Category Maps</pluralLabel>
</CustomObject>