force-app/main/default/objects/smagicinteract__Rule_Interface_Category_Map__mdt/fields/smagicinteract__Fallback_SenderId__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Fallback_SenderId__c</fullName>
    <label>Fallback SenderId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>