force-app/main/default/objects/smagicinteract__Rule_Interface_Category_Map__mdt/fields/smagicinteract__Interface_Category__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Interface_Category__c</fullName>
    <label>Interface Category</label>
    <referenceTo>smagicinteract__Interface_Category__mdt</referenceTo>
    <relationshipLabel>Rule Interface Category Maps</relationshipLabel>
    <relationshipName>Rule_Interface_Category_Maps</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>