force-app/main/default/objects/smagicinteract__Rule_Interface_Category_Map__mdt/fields/smagicinteract__Routing_Rule__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Routing_Rule__c</fullName>
    <label>Routing Rule</label>
    <referenceTo>smagicinteract__Routing_Rule__mdt</referenceTo>
    <relationshipLabel>Rule Interface Category Maps</relationshipLabel>
    <relationshipName>Rule_Interface_Category_Maps</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>